# icland

./: .gitignore  MUJOCO_LOG.TXT  README.md  demo.py  pyproject.toml  testing.py
.github/workflows/: publish-to-pypi.yml  pytest.yml  tests.yml
benchmarking/: create_report.py  playground_benchmarking.py  run_benchmarking.py  sys_info.py
docs/: index.md
docs/source/: index.md
examples/: agent_monitor.py  basic.py  batched.py  brax_env.py  video_record.py
scripts/: benchmark.py  benchmark_functions.py  controller.py  trajectory.py  video_generator.py  wsl.py
scripts/benchmarking/: benchmark.py  benchmark_functions.py
scripts/benchmarking/graph_gen/: graph_gen.py
scripts/benchmarking/graph_gen/grid/: render_frame_gpu_1_agent_2x2_100_steps.json  render_frame_gpu_1_agent_4x4_100_steps.json
scripts/benchmarking/graph_gen/jsons/: render_frame_gpu_1_agent_empty_world_100_steps.json  render_frame_gpu_2_agents_empty_world_100_steps.json  render_frame_gpu_2_agents_simple_non_empty_world_100_steps.json  render_frame_gpu_4_agents_empty_world_100_steps.json  render_frame_gpu_4_agents_simple_non_empty_world_100_steps.json
scripts/benchmarking/graph_gen/render_frame/cpu/empty_world/1 agent/: render_frame_cpu_1_agent_empty_world_100_steps.json
scripts/benchmarking/graph_gen/render_frame/cpu/non_empty_world/1 agent/: render_frame_cpu_1_agent_non_empty_world_100_steps.json
src/: test.stl
src/ICLand/: __init__.py  agent.py  constants.py
src/TestSuite/: output_video_temp.py  unit_tests.py
src/icland/: __init__.py  agent.py  brax.py  brax_env.py  constants.py  game.py  game_generator.py  presets.py  prop.py  types.py
src/icland/agent/: __init__.py  agent.py
src/icland/renderer/: jax_raycast.py  jrenderer.py  renderer.py  sdfs.py
src/icland/server/: trajectory_poster.py  trajectory_server.py
src/icland/server/templates/: index.html
src/icland/tileset/: data.xml
src/icland/world_gen/: JITModel.py  Model copy.py  Model.py  Program.py  README.md  SerialModel.py  SimpleTiledModel.py  XMLReader.py  converter.py  model_editing.py  model_import.py  render.py  requirements.txt  samples_reference.xml  sdfs.py  tile_data.py
src/render/: render.py
src/world_gen/: Model.py  Program.py  samples_reference.xml
tests/: brax.py  brax_env.py  controller.py  output_video_temp.py  test_agent.py  test_agent_movement.py  test_brax.py  test_collect.py  test_collect_agent_component_mjx.py  test_converter.py  test_game.py  test_jit_model.py  test_model.py  test_pipeline.py  test_policies.py  test_proof.py  test_renderer.py  test_sdf.py  test_sdfs.py  test_world_generation.py  test_worlds.py  test_xml_reader.py  trajectory.py  video_generator.py
tests/assets/: __init__.py  frames.py  policies.py  worlds.py
tests/assets/meshes/: world_0.stl  world_1.stl  world_10.stl  world_11.stl  world_12.stl  world_13.stl  world_14.stl  world_15.stl  world_16.stl  world_17.stl  world_18.stl  world_19.stl  world_2.stl  world_20.stl  world_21.stl  world_22.stl  world_23.stl  world_24.stl  world_25.stl  world_26.stl  world_27.stl  world_28.stl  world_29.stl  world_3.stl  world_30.stl  world_31.stl  world_32.stl  world_33.stl  world_34.stl  world_35.stl  world_36.stl  world_37.stl  world_38.stl  world_39.stl  world_4.stl  world_40.stl  world_41.stl  world_42.stl  world_43.stl  world_44.stl  (+60 more)
(+5 files in other folders)
