[project]
name = "icland"
version = "0.1.0"
description = "Recreating Google DeepMind's XLand RL environment in JAX"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "jax[cuda12]>=0.4.38",
    "mujoco>=3.2.6",
    "mujoco-mjx>=3.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "D",     # Enable pydocstyle checks
    "F401",  # Remove unused imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"
