[project]
name = "icland"
version = "0.1.0"
description = "Recreating Google DeepMind's XLand RL environment in JAX"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "flax>=0.10.2",
    "hilbertcurve>=2",
    "imageio[ffmpeg]>=2.37.0",
    "jax>=0.5.0 ; sys_platform != 'linux'",
    "jax[cuda12]>=0.5.0 ; sys_platform == 'linux'",
    "matplotlib>=3.10.0",
    "mujoco>=3.2.6",
    "mujoco-mjx>=3.2.6",
    "numpy>=2.2.2",
    "numpy-stl>=3.2.0",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "sphinx>=8.1.3",
    "types-setuptools>=75.8.0.20250110",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "D",     # Enable pydocstyle checks
    "F401",  # Remove unused imports
]
extend-select = ["I"]  # Isort imports

[tool.ruff.lint.pydocstyle]
convention = "google"

# Mujoco lacks supports for types
# https://github.com/google-deepmind/mujoco/issues/244#issuecomment-1111010344
[tool.mypy]
disable_error_code = ["import-untyped"]
